k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: angular
  template:
    metadata:
      labels:
        component: angular
    spec:
      containers:
        - name: angular
          image: inimeve/angular-app
          imagePullPolicy: Never
          ports:
            - containerPort: 80
