k8s/angular-client-ip-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
