k8s/spring-boot-client-ip-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: spring-boot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
