k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /angular-app/?(.*)
            pathType: Prefix
            backend:
              serviceName: angular-cluster-ip-service
              servicePort: 80
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              serviceName: spring-boot-cluster-ip-service
              servicePort: 80
